[package]
name = "kernel-hal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"], rev = "0074cbc" }
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"

[features]
default = ["arch-riscv"]
arch-riscv = []