[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel-hal = { path = "../kernel-hal" }
bitflags = "1.2.1"
buddy_system_allocator = "0.8.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
xmas-elf = "0.8.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
device_tree = { git = "https://github.com/hwenyuu/device_tree-rs.git" }
hashbrown = { version = "0.1", features = ["nightly"]}